Ejemplo hoja de estilos y jquery

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,9 @@
 textarea {
     resize: none;
 }
+#texto_cabeza {
+    font-family: 'Poiret One', cursive;
+}
+#basic-addon3{
+	font-family: 'Gloria Hallelujah', cursive;
+}
