--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,17 @@
 textarea {
     resize: none;
 }
+body{
+	background-color: #D2F08F;
+}
 #texto_cabeza {
     font-family: 'Poiret One', cursive;
+    color: #341127;
 }
-#basic-addon3{
+
+.input-group,#text-ingresa-datos,#datos_peronales_nombre,
+#datos_peronales_apellido,#text-razon,#datos_personales_razon,
+#btn_buscar{
 	font-family: 'Gloria Hallelujah', cursive;
+	color: #2A797C;
 }
